public/css/nexthome.css
@import url("https://fonts.googleapis.com/css?family=Inconsolata:400,700|Source+Sans+Pro:400,600");
  header .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 40px; }
  header .right {
    display: flex;
    flex: 1;
    justify-content: flex-end;
    align-items: center; }
    header .right .searchbox {
      cursor: pointer; }
      header .right .searchbox img {
        height: 20px;
        width: 20px;
        margin: auto 5px 0px;}
      header .right .searchbox input {
        font-family: "Source Sans Pro", sans-serif;
        border: none;
        border-bottom: 1px solid #c3cad1;
        transition: 0.2s ease-out; }
      header .right .searchbox input.hide {
        width: 0px !important; }
    header .right .searchbox.full {
      width: 95%;
      flex: 1;
      margin: 2%; }
      header .right .searchbox.full input {
        width: 95%; }
    header .right .switch {
      font-size: 14px;
      font-family: "Source Sans Pro", sans-serif;
      margin-right: 25px;
      cursor: pointer;
      transition: 0.2s linear; }
      header .right .switch span img {
        width: 20px;
        margin: 0px 5px;
        transition: 0.1s linear; }
    header .right .switch:hover {
      opacity: 0.5; }
      header .right .switch:hover span img {
        transform: rotate(180deg); }
    header .right .menu {
      position: relative;
      height: 19px;
      width: 25px;
      cursor: pointer; }
      header .right .menu span {
        position: absolute;
        transition: 0.1s linear; }
      header .right .menu span.one {
        height: 3px;
        width: 100%;
        top: 0;
        background: #17173C; }
      header .right .menu span.two {
        height: 3px;
        width: 100%;
        top: 8px;
        background: #17173C; }
      header .right .menu span.three {
        height: 3px;
        width: 60%;
        bottom: 0px;
        background: #17173C; }
    header .right .menu:hover span.one {
      width: 60%; }
    header .right .menu:hover span.three {
      width: 100%; }

*:focus {
  outline: none !important; }

body {
  background-color: #F4F6F6; }

.decBlockchainWrapper {
    padding: 60px 0px; }
  .decBlockchainWrapper .col-lg-4.col-md-6 {
    position: relative;
    height: 100px;
    margin-bottom: 20px; }
  .decBlockchainWrapper .title {
    font-family: "Source Sans Pro", sans-serif;
    font-size: 20px;
    margin-bottom: 30px; }
  .decBlockchainWrapper .decredblockWrap.fade {
    opacity: 0.5; }
  .decBlockchainWrapper .decredblockWrap .decredblock {
    position: absolute;
    height: 100px;
    background: #8997A5;
    border-radius: 4px;
    overflow: hidden;
    transition: 0.2s ease-in-out;
    width: 90%;
    left: 5%;
    right: 5%;
    top: 0;
    cursor: pointer; }
    .decBlockchainWrapper .decredblockWrap .decredblock .palette {
      position: absolute;
      top: 0;
      bottom: 0;
      height: 100%;
      transition: 0.2s linear; }
    .decBlockchainWrapper .decredblockWrap .decredblock .palette.one {
      background: #8FB5FF; }
    .decBlockchainWrapper .decredblockWrap .decredblock .palette.two {
      background: #6D9EFF; }
    .decBlockchainWrapper .decredblockWrap .decredblock .palette.three {
      background: #4B88FF; }
    .decBlockchainWrapper .decredblockWrap .decredblock .palette.four {
      background: #2971FF; }
    .decBlockchainWrapper .decredblockWrap .decredblock .palette.five {
      background: #075AFF; }
    .decBlockchainWrapper .decredblockWrap .decredblock .info-block {
      position: absolute;
      bottom: 0;
      left: 0;
      width: 100%;
      height: 35px;
      background: white;
      transition: 0.2s ease-in-out;
      overflow: hidden; }
      .decBlockchainWrapper .decredblockWrap .decredblock .info-block .expanded-block {
        margin-top: 35px; }
        .decBlockchainWrapper .decredblockWrap .decredblock .info-block .expanded-block button {
          background: none;
          border: 1px solid #c3cad1;
          width: 80%;
          margin-left: 10%;
          padding: 6px;
          font-family: "Source Sans Pro", sans-serif;
          border-radius: 4px;
          margin-top: 8px; }
        .decBlockchainWrapper .decredblockWrap .decredblock .info-block .expanded-block .data {
          font-family: "Inconsolata", monospace;
          font-size: 22px;
          font-weight: bold;
          display: flex;
          flex-direction: row;
          align-items: flex-end;
          margin-left: 10px;
          font-size: 16px;
          line-height: 29px;
          margin-left: 6px; }
          .decBlockchainWrapper .decredblockWrap .decredblock .info-block .expanded-block .data p {
            margin: 0px; }
          .decBlockchainWrapper .decredblockWrap .decredblock .info-block .expanded-block .data span:first-child {
          display: flex;
          flex-direction: row;
          align-items: flex-end; }
        .decBlockchainWrapper .decredblockWrap .decredblock .info-block .expanded-block .subdata {
          font-family: "Source Sans Pro", sans-serif;
          font-size: 12px;
          margin-left: 12%; }
      .decBlockchainWrapper .decredblockWrap .decredblock .info-block img {
        float: left; }
    .decBlockchainWrapper .decredblockWrap .decredblock span.color-code {
      position: absolute;
      font-family: "Source Sans Pro", sans-serif;
      font-size: 12px;
      color: #2970FF;
      font-weight: bold;
      line-height: 35px;
      left: 10px; }
    .decBlockchainWrapper .decredblockWrap .decredblock span.timespan {
      position: absolute;
      font-family: "Source Sans Pro", sans-serif;
      font-size: 12px;
      line-height: 35px;
      font-weight: bold;
      right: 10px; }
  .decBlockchainWrapper .decredblockWrap.expanded {
    opacity: 1 !important; }
/* ... */

